[package]
name = "fuel-tx"
version = "0.1.0"
authors = ["Victor Lopez <victor.lopez@fuel.sh>"]
categories = ["cryptography::cryptocurrencies", "data-structures"]
edition = "2018"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
repository = "https://github.com/FuelLabs/fuel-tx"
description = "FuelVM transaction."

[dependencies]
fuel-asm = { git = "ssh://git@github.com/FuelLabs/fuel-asm.git", branch = "vlopes11/no-std", default-features = false }
itertools = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
sha2 = { version = "0.9", optional = true }

[features]
default = ["std"]
std = [ "fuel-asm/std", "itertools", "rand", "sha2" ]
serde-types = [ "fuel-asm/serde-types", "serde" ]
